Formatting fixes